LAB_9/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
D:\Program - BlueJ\jdk\bin\javadoc.exe
-sourcepath
D:\CS318\LAB_9
-source
1.8
-classpath
D:\Program - BlueJ\lib\bluejcore.jar;D:\Program - BlueJ\lib\junit-4.11.jar;D:\Program - BlueJ\lib\hamcrest-core-1.3.jar;D:\Program - BlueJ\lib\lang-stride.jar;D:\Program - BlueJ\lib\userlib\pi4j-core.jar;D:\Program - BlueJ\lib\userlib\pi4j-device.jar;D:\Program - BlueJ\lib\userlib\pi4j-gpio-extension.jar;D:\Program - BlueJ\lib\userlib\pi4j-service.jar;D:\CS318\LAB_9
-d
D:\CS318\LAB_9\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
LAB_9
-windowtitle
LAB_9
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
http://download.oracle.com/javase/8/docs/api/
D:\CS318\LAB_9/Company.java
D:\CS318\LAB_9/Department.java
D:\CS318\LAB_9/Employee.java
D:\CS318\LAB_9/Permanent.java
D:\CS318\LAB_9/Contract.java
D:\CS318\LAB_9/Person.java
<---- end of javadoc command ---->
Loading source file D:\CS318\LAB_9\Company.java...
Loading source file D:\CS318\LAB_9\Department.java...
Loading source file D:\CS318\LAB_9\Employee.java...
Loading source file D:\CS318\LAB_9\Permanent.java...
Loading source file D:\CS318\LAB_9\Contract.java...
Loading source file D:\CS318\LAB_9\Person.java...
Constructing Javadoc information...
D:\CS318\LAB_9\Department.java:4: error: cannot find symbol
    public List<Employee> Employees;
           ^
  symbol:   class List
  location: class Department
Standard Doclet version 1.8.0_192
Building tree for all the packages and classes...
Generating D:\CS318\LAB_9\doc\Company.html...
Generating D:\CS318\LAB_9\doc\Contract.html...
Generating D:\CS318\LAB_9\doc\Department.html...
Generating D:\CS318\LAB_9\doc\Employee.html...
Generating D:\CS318\LAB_9\doc\Permanent.html...
Generating D:\CS318\LAB_9\doc\Person.html...
Generating D:\CS318\LAB_9\doc\package-frame.html...
Generating D:\CS318\LAB_9\doc\package-summary.html...
Generating D:\CS318\LAB_9\doc\package-tree.html...
Generating D:\CS318\LAB_9\doc\constant-values.html...
Building index for all the packages and classes...
Generating D:\CS318\LAB_9\doc\overview-tree.html...
Generating D:\CS318\LAB_9\doc\index-all.html...
Building index for all classes...
Generating D:\CS318\LAB_9\doc\allclasses-frame.html...
Generating D:\CS318\LAB_9\doc\allclasses-noframe.html...
Generating D:\CS318\LAB_9\doc\index.html...
Generating D:\CS318\LAB_9\doc\help-doc.html...
1 warning
